0025111: Incomplete section curve between Conical and Toroidal surfaces

Correction of test cases for CR25111

Test cases for issue CR25111